# pavucontrol

./: .gitignore  README.md  meson.build  meson_options.txt
archlinux/: PKGBUILD
src/: mainwindow.cc  mainwindow.h  mainwindow.ui  pavucontrol.cc  rolewidget.cc  sinkinputwidget.cc  sourceoutputwidget.cc  streamwidget.cc  streamwidget.h  streamwidget.ui
