option('pkgrel',
       type : 'string', value : '',
       description : 'Package release suffix appended to the version label (e.g. "1.12")')
option('lynx',
       type : 'feature', value : 'auto',
       description : 'Enable building of the README text file for installation')
option('audio-feedback',
       type : 'feature', value: 'auto',
       description : 'Play a sound when you change the volume of a sink')
